.ogg file is not recognized as a movie in File Browser #37199

Closed
opened 2013-10-24 07:44:42 +02:00 by Shinsuke Irie · 10 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.10 amd64 + GeForce GTX 670

- Blender version with error, and version that worked ---

2.69 RC3
r60907

- Short description of error ---

The File Browser doesn't show .ogg files when using the filter to find movie files.
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.10 amd64 + GeForce GTX 670 - Blender version with error, and version that worked --- 2.69 RC3 r60907 - Short description of error --- The File Browser doesn't show .ogg files when using the filter to find movie files. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%can confirm this.
afaik the ogg container can hold audio/video/text/metadata or any combination of these.
".ogg" could easily be added to the list of movie filextensions ("imb_ext_movie- [ ]") but an underlying problem is that - without further changes - a fileentry in blender is only flagged as one type [ so for example either of type "MOVIEFILE" or of type "SOUNDFILE" ].
".ogg" is already flagged as SOUNDFILE. If ".ogg" is added to imb_ext_movie- [ ], it wont be flagged as soundfile anymore...

maybe Elubie can decide on this?

P.S.: while looking at it I added ".webm" to the list of moviefileextensions (which at least in my ffmpeg/blender reads in fine) - see attached micropatch%%%

%%%can confirm this. afaik the ogg container can hold audio/video/text/metadata or any combination of these. ".ogg" could easily be added to the list of movie filextensions ("imb_ext_movie- [ ]") but an underlying problem is that - without further changes - a fileentry in blender is only flagged as _one_ type [ so for example either of type "MOVIEFILE" _or_ of type "SOUNDFILE" ]. ".ogg" is already flagged as SOUNDFILE. If ".ogg" is added to imb_ext_movie- [ ], it wont be flagged as soundfile anymore... maybe Elubie can decide on this? P.S.: while looking at it I added ".webm" to the list of moviefileextensions (which at least in my ffmpeg/blender reads in fine) - see attached micropatch%%%

%%%Andrea, can you please look into this? Thanks!%%%

%%%Andrea, can you please look into this? Thanks!%%%
Member

%%%I know there are video files around that use ogg, but according to Xiph.org, the .ogg extension should be reserved for audio (Ogg Vorbis I files)
At this point I wouldn't like to add checks in the file browser to actually look into the file for file type detection, so for now I decided to not add the .ogg file extension as a movie.

Will add the .webm movie though.%%%

%%%I know there are video files around that use ogg, but according to Xiph.org, the .ogg extension should be reserved for audio (Ogg Vorbis I files) At this point I wouldn't like to add checks in the file browser to actually look into the file for file type detection, so for now I decided to not add the .ogg file extension as a movie. Will add the .webm movie though.%%%
Author
Member

%%%@Andrea, I strongly disagree with you. The .ogg suffix is actually used by many users even though the Xiph.org recommends us not to use it for movie files. In fact, Blender itself uses the .ogg suffix when writing Ogg movie file, so the Ogg movies we created with Blender cannot be found using the file browser.
%%%

%%%@Andrea, I strongly disagree with you. The .ogg suffix is actually used by many users even though the Xiph.org recommends us not to use it for movie files. In fact, Blender itself uses the .ogg suffix when writing Ogg movie file, so the Ogg movies we created with Blender cannot be found using the file browser. %%%
Author
Member

%%%Reopening.

The inconsistency between writing and browsing is really bad. Ogg movie files created with Blender should be recognized by Blender itself.
Besides, Xiph.org defined another file extension .ogx for common usage. To support the .ogx file, looking into the actual file header cannot be avoided.

At least, the file extension used for writing Ogg movie files should be changed from .ogg to .ogv.
%%%

%%%Reopening. The inconsistency between writing and browsing is really bad. Ogg movie files created with Blender should be recognized by Blender itself. Besides, Xiph.org defined another file extension .ogx for common usage. To support the .ogx file, looking into the actual file header cannot be avoided. At least, the file extension used for writing Ogg movie files should be changed from .ogg to .ogv. %%%
Member

%%%Ok, I hear you :)

I have committed full fix now in rev. 61034.

.ogg is now recognized as both video and audio, depending on whether it contains a movie or not.
I also made Blender by default use .ogv when writing an animation in the ogg/theora format.

Can you give me a quick feedback if for you the functionality works ok now, so I can then close the bug report?

Thanks for reporting,
Andrea
%%%

%%%Ok, I hear you :) I have committed full fix now in rev. 61034. .ogg is now recognized as both video and audio, depending on whether it contains a movie or not. I also made Blender by default use .ogv when writing an animation in the ogg/theora format. Can you give me a quick feedback if for you the functionality works ok now, so I can then close the bug report? Thanks for reporting, Andrea %%%
Author
Member

%%%Thanks for the fix! So far it works as I expect.

Yep, you can close this.
%%%

%%%Thanks for the fix! So far it works as I expect. Yep, you can close this. %%%
Member

%%%Ok, thanks. Closing then.%%%

%%%Ok, thanks. Closing then.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37199
No description provided.