Add .webm to the list of extensions recognized as video (Patch by Philipp Oeser, submitted in [#37199], many thanks)